--- a/Charts/fluentd/values.yaml
+++ b/Charts/fluentd/values.yaml
@@ -143,7 +143,8 @@ autoscaling:
 # Full description about this field: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.15/#pod-v1-core
 terminationGracePeriodSeconds: 90
 
-nodeSelector: {}
+nodeSelector: 
+  neonkube.io/monitor.logs: "true"
 
 tolerations: []
 
