neon-cluster-manager is now deployed earlier in setup, so I added logic to wait for services to become ready. It also configures the database for use by Grafana now.

--- a/Charts/neon-cluster-manager/templates/deployment.yaml
+++ b/Charts/neon-cluster-manager/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
       annotations:
         readiness.status.sidecar.istio.io/applicationPorts: ""
     spec:
+      serviceAccount: neon-cluster-manager
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
