switch to Kiali operator

--- a/Charts/kiali/templates/serviceaccount.yaml
+++ b/Charts/kiali/templates/serviceaccount.yaml
@@ -1,14 +1,15 @@
+---
 apiVersion: v1
 kind: ServiceAccount
-  {{- if .Values.global.imagePullSecrets }}
-imagePullSecrets:
-  {{- range .Values.global.imagePullSecrets }}
-- name: {{ . }}
-  {{- end }}
-  {{- end }}
 metadata:
-  name: kiali-service-account
+  name: {{ include "kiali-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: kiali
-    release: {{ .Release.Name }}
+  {{- include "kiali-operator.labels" . | nindent 4 }}
+{{- if .Values.image.pullSecrets }}
+imagePullSecrets:
+{{- range .Values.image.pullSecrets }}
+- name: {{ . }}
+{{- end }}
+{{- end }}
+...
