--- a/Charts/kiali/templates/clusterrolebinding.yaml
+++ b/Charts/kiali/templates/clusterrolebinding.yaml
@@ -1,33 +1,16 @@
-{{- if not .Values.kiali.dashboard.viewOnlyMode }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: istio-kiali-admin-role-binding-{{ .Release.Namespace }}
+  name: {{ include "kiali-operator.fullname" . }}
   labels:
-    app: kiali
-    release: {{ .Release.Name }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: kiali
-subjects:
-  - kind: ServiceAccount
-    name: kiali-service-account
-    namespace: {{ .Release.Namespace }}
-{{- else }}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: istio-kiali-viewer-role-binding-{{ .Release.Namespace }}
-  labels:
-    app: kiali
-    release: {{ .Release.Name }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: kiali-viewer
+  {{- include "kiali-operator.labels" . | nindent 4 }}
 subjects:
 - kind: ServiceAccount
-  name: kiali-service-account
+  name: {{ include "kiali-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
-{{- end }}
+roleRef:
+  kind: ClusterRole
+  name: {{ include "kiali-operator.fullname" . }}
+  apiGroup: rbac.authorization.k8s.io
+...
