--- a/Charts/kiali/templates/deployment.yaml
+++ b/Charts/kiali/templates/deployment.yaml
@@ -1,99 +1,83 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kiali
+  name: {{ include "kiali-operator.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: kiali
-    release: {{ .Release.Name }}
+  {{- include "kiali-operator.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.kiali.replicaCount }}
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: kiali
+    {{- include "kiali-operator.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      name: kiali
+      name: {{ include "kiali-operator.fullname" . }}
+      namespace: {{ .Release.Namespace }}
       labels:
-        app: kiali
-        release: {{ .Release.Name }}
+        # required for the operator SDK metric service selector
+        name: {{ include "kiali-operator.fullname" . }}
+      {{- include "kiali-operator.labels" . | nindent 8 }}
       annotations:
-        sidecar.istio.io/inject: "false"
-        scheduler.alpha.kubernetes.io/critical-pod: ""
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9090"
-        kiali.io/runtimes: go,kiali
+        prometheus.io/scrape: {{ .Values.metrics.enabled | quote }}
+        {{- if .Values.podAnnotations }}
+        {{- toYaml .Values.podAnnotations | nindent 8 }}
+    {{- end }}
     spec:
-      serviceAccountName: kiali-service-account
-{{- if .Values.global.priorityClassName }}
-      priorityClassName: "{{ .Values.global.priorityClassName }}"
-{{- end }}
+      serviceAccountName: {{ include "kiali-operator.fullname" . }}
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName | quote }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations:
+      {{- toYaml .Values.tolerations | nindent 8 }}
+      {{- end }}
+      {{- if .Values.nodeSelector }}
+      nodeSelector:
+      {{- toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
       containers:
-      - image: "{{ .Values.kiali.hub }}/kiali:{{ .Values.kiali.tag }}"
-        imagePullPolicy: {{ .Values.global.imagePullPolicy | default "Always" }}
-        name: kiali
-        command:
-        - "/opt/kiali/kiali"
-        - "-config"
-        - "/kiali-configuration/config.yaml"
-        - "-v"
-        - "3"
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.kiali.contextPath }}/healthz
-            port: 20001
-            scheme:  {{ if .Values.kiali.security.enabled }} 'HTTPS' {{ else }} 'HTTP' {{ end }}
-          initialDelaySeconds: 5
-          periodSeconds: 30
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.kiali.contextPath }}/healthz
-            port: 20001
-            scheme:  {{ if .Values.kiali.security.enabled }} 'HTTPS' {{ else }} 'HTTP' {{ end }}
-          initialDelaySeconds: 5
-          periodSeconds: 30
+      - name: operator
+        image: "{{ .Values.image.repo }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy | default "Always" }}
+        args:
+        - "--zap-level=info"
+        volumeMounts:
+        - mountPath: /tmp/ansible-operator/runner
+          name: runner
         env:
-        - name: ACTIVE_NAMESPACE
+        - name: WATCH_NAMESPACE
+          value: {{ .Values.watchNamespace | default "\"\""  }}
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: PROMETHEUS_SERVICE_URL
-          {{- if .Values.global.prometheusNamespace }}
-          value: http://{{ .Values.global.prometheusServiceName }}.{{ .Values.global.prometheusNamespace }}:9090
-          {{ else }}
-          value: http://prometheus:9090
-          {{- end }}
-{{- if .Values.kiali.contextPath }}
-        - name: SERVER_WEB_ROOT
-          value: {{ .Values.kiali.contextPath }}
-{{- end }}
-        volumeMounts:
-        - name: kiali-configuration
-          mountPath: "/kiali-configuration"
-        - name: kiali-cert
-          mountPath: "/kiali-cert"
-        - name: kiali-secret
-          mountPath: "/kiali-secret"
+        - name: OPERATOR_NAME
+          value: {{ include "kiali-operator.fullname" . }}
+        - name: ANSIBLE_DEBUG_LOGS
+          value: {{ .Values.debug.enabled | quote }}
+        - name: ANSIBLE_VERBOSITY_KIALI_KIALI_IO
+          value: {{ .Values.debug.verbosity | quote }}
+        {{- if .Values.env }}
+        {{- toYaml .Values.env | nindent 8 }}
+        {{- end }}
+        ports:
+        - name: http-metrics
+          containerPort: 8383
+        - name: cr-metrics
+          containerPort: 8686
+        {{- if .Values.resources }}
         resources:
-{{- if .Values.kiali.resources }}
-{{ toYaml .Values.kiali.resources | indent 10 }}
-{{- else }}
-{{ toYaml .Values.global.defaultResources | indent 10 }}
-{{- end }}
+        {{- toYaml .Values.resources | nindent 10 }}
+        {{- end }}
       volumes:
-      - name: kiali-configuration
-        configMap:
-          name: kiali
-      - name: kiali-cert
-        secret:
-          secretName: istio.kiali-service-account
-{{- if not .Values.kiali.security.enabled }}
-          optional: true
-{{- end }}      
-      - name: kiali-secret
-        secret:
-          secretName: {{ .Values.kiali.dashboard.secretName }}
-          optional: true
+      - name: runner
+        emptyDir: {}
       affinity:
-      {{- include "nodeaffinity" . | indent 6 }}
-      {{- include "podAntiAffinity" . | indent 6 }}
+      {{- toYaml .Values.affinity | nindent 8 }}
+...
