--- a/Charts/citus-postgresql/templates/statefulset_master.yaml
+++ b/Charts/citus-postgresql/templates/statefulset_master.yaml
@@ -29,7 +29,7 @@ spec:
       imagePullSecrets:
         - name: {{ .Values.imagePullSecrets }}
       {{- end }}
-      {{- with .Values.master.tolerations }}
+      {{- with .Values.tolerations }}
       tolerations:
       {{ toYaml . | nindent 6 }}
       {{- end }}
