--- a/Charts/openebs/templates/deployment-local-provisioner.yaml
+++ b/Charts/openebs/templates/deployment-local-provisioner.yaml
@@ -49,7 +49,9 @@ spec:
         # OPENEBS_NAMESPACE is the namespace that this provisioner will
         # lookup to find maya api service
         - name: OPENEBS_NAMESPACE
-          value: "{{ .Release.Namespace }}"
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NODE_NAME
           valueFrom:
             fieldRef:
