--- a/Desktop/WinDesktop/WinDesktop.csproj
+++ b/Desktop/WinDesktop/WinDesktop.csproj
@@ -81,7 +81,7 @@
     <ProjectReference Include="..\..\Lib\Neon.Kube.Hosting\Neon.Kube.Hosting.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube.HyperVLocal\Neon.Kube.HyperVLocal.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube.HyperV\Neon.Kube.HyperV.csproj" />
-    <ProjectReference Include="..\..\Lib\Neon.Kube.Machine\Neon.Kube.Machine.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Kube.Machine\Neon.Kube.BareMachine.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube.XenServer\Neon.Kube.XenServer.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube\Neon.Kube.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.SSH.NET\Neon.SSH.NET.csproj" />
