--- a/Charts/kiali/values.yaml
+++ b/Charts/kiali/values.yaml
@@ -2,8 +2,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 image:
-  repo: kiali/kiali-operator
-  tag: v1.18.1
+  repo: quay.io/kiali/kiali-operator
+  tag: v1.24.0
   pullPolicy: Always
   pullSecrets: []
 
