--- a/Charts/prometheus-operator/values.yaml
+++ b/Charts/prometheus-operator/values.yaml
@@ -957,6 +957,7 @@ prometheusOperator:
         sidecar.istio.io/inject: "false"
       nodeSelector: 
         neonkube.io/monitor.metrics: "true"
+      tolerations: []
 
 
   ## Service account for Alertmanager to use.
