added   novatec-sdg-panel plugin

--- a/Charts/grafana/values.yaml
+++ b/Charts/grafana/values.yaml
@@ -307,6 +307,7 @@ plugins:
   - xginn8-pagerduty-datasource
   - camptocamp-prometheus-alertmanager-datasource
   - grafana-piechart-panel
+  - novatec-sdg-panel
 
 ## Configure grafana datasources
 ## ref: http://docs.grafana.org/administration/provisioning/#datasources
