--- a/Charts/yugabyte/templates/service.yaml
+++ b/Charts/yugabyte/templates/service.yaml
@@ -126,7 +126,7 @@ metadata:
 spec:
   serviceName: "{{ $root.Release.Name }}-{{ .name }}"
   podManagementPolicy: {{ $root.Values.PodManagementPolicy }}
-  {{ if eq .name (printf "%s-yb-masters" $root.Release.Name) }}
+  {{ if contains .name "yb-masters" }}
   replicas: {{ $root.Values.replicas.master }}
   {{ else }}
   replicas: {{ $root.Values.replicas.tserver  }}
@@ -162,7 +162,7 @@ spec:
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
-      {{ if eq .name (printf "%s-yb-masters" $root.Release.Name) }}
+      {{ if contains .name "yb-masters" }}
       partition: {{ $root.Values.partition.master }}
       {{ else }}
       partition: {{ $root.Values.partition.tserver }}
@@ -173,7 +173,7 @@ spec:
   template:
     metadata:
       annotations:
-      {{ if eq .name (printf "%s-yb-masters" $root.Release.Name) }}
+      {{ if contains .name "yb-masters" }}
         traffic.sidecar.istio.io/excludeInboundPorts: '7000'
         traffic.sidecar.istio.io/excludeOutboundPorts: '7000'
       {{ else }}
@@ -261,7 +261,7 @@ spec:
             fieldRef:
               fieldPath: metadata.namespace
         resources:
-        {{ if eq .name (printf "%s-yb-masters" $root.Release.Name) }}
+        {{ if contains .name "yb-masters" }}
 {{ toYaml $root.Values.resource.master | indent 10 }}
         {{ else }}
 {{ toYaml $root.Values.resource.tserver | indent 10 }}
@@ -272,7 +272,7 @@ spec:
         # https://github.com/yugabyte/charts/issues/11
         workingDir: "/mnt/disk0"
         command:
-        {{ if eq .name (printf "%s-yb-masters" $root.Release.Name) }}
+        {{ if contains .name "yb-masters" }}
           - "/home/yugabyte/bin/yb-master"
           {{ if not $root.Values.storage.ephemeral }}
           - "--fs_data_dirs={{ template "yugabyte.fs_data_dirs" $storageInfo }}"
