--- a/Charts/kibana/values.yaml
+++ b/Charts/kibana/values.yaml
@@ -1,7 +1,7 @@
 ---
 
-elasticsearchURL: "" # "http://elasticsearch-master.monitoring:9200"
-elasticsearchHosts: "http://elasticsearch-master.monitoring:9200"
+elasticsearchURL: "" # "http://neon-logs-elasticsearch-master.monitoring:9200"
+elasticsearchHosts: "http://neon-logs-elasticsearch-master.monitoring:9200"
 
 replicas: 1
 
@@ -21,7 +21,7 @@ secretMounts: []
 #    path: /usr/share/elasticsearch/config/certs
 
 image: "docker.elastic.co/kibana/kibana"
-imageTag: "7.5.1"
+imageTag: "7.9.1"
 imagePullPolicy: "IfNotPresent"
 
 resources: {}
@@ -110,7 +110,16 @@ readinessProbe:
 imagePullSecrets: []
 nodeSelector: 
   neonkube.io/monitor.logs: "true"
-tolerations: []
+tolerations: 
+- key: "neonkube.io/logs"
+  operator: "Exists"
+  effect: "NoSchedule"
+- key: "neonkube.io/metrics"
+  operator: "Exists"
+  effect: "NoSchedule"
+- key: "node.kubernetes.io/disk-pressure"
+  operator: "Exists"
+  effect: "NoSchedule"
 affinity: {}
 
 nameOverride: ""
