fixed more renaming services

--- a/Charts/fluent-bit/values.yaml
+++ b/Charts/fluent-bit/values.yaml
@@ -47,7 +47,7 @@ priorityClassName: ""
 backend:
   type: forward
   forward:
-    host: fluentd.monitoring
+    host: neon-log-collector-fluentd.monitoring
     port: 24224
     tls: "off"
     tls_verify: "off"
